added blog page

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -15,8 +15,7 @@
         <a href="/about/">About</a>
         <a href="/blog/">Blog</a>
         
-        <h1>About 51 LLMs</h1>
-        <p>This site is a record of experiments with 51 AI language models by a reader and writer of English.</p>
-        <p>The best source of new knowledge about AIs as writers will come from readers and writers of natural language.</p>
+        <h1>51 LLMs | the Blog</h1>
+        <p>This blog will be a frequent informal update on experiments with my current 51 favorite LLMs.</p>
 	</body>
 </html>
