--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,8 @@
 	</head>
 	<body>
 		<a href="/">Home</a>
-		<a href="/about/">About</a>
+        <a href="/about/">About</a>
+        <a href="/blog/">Blog</a>
 
 		<h1>51 LLMs</h1>
 	</body>
