--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,5 +1,5 @@
 ---
-
+const pageTitle = "51 LLMs | Blog"
 ---
 
 <html lang="en">
@@ -8,14 +8,19 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
+		<title>{pageTitle}</title>
 	</head>
 	<body>
         <a href="/">Home</a>
         <a href="/about/">About</a>
         <a href="/blog/">Blog</a>
         
-        <h1>51 LLMs | the Blog</h1>
+        <h1>{pageTitle}</h1>
         <p>This blog will be a frequent informal update on experiments with my current 51 favorite LLMs.</p>
+        <ul>
+            <li><a href="/posts/post-1/">Post 1</a></li>
+			<li><a href="/posts/post-2/">Post 2</a></li>
+      		<li><a href="/posts/post-3/">Post 3</a></li>
+        </ul>
 	</body>
 </html>
