--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,9 @@
 ---
+import Navigation from '../components/Navigation.astro'
+import Footer from '../components/Footer.astro'
+
+import '../styles/global.css'
+
 const pageTitle = "51 LLMs"
 ---
 
@@ -11,10 +16,10 @@ const pageTitle = "51 LLMs"
 		<title>{pageTitle}</title>
 	</head>
 	<body>
-		<a href="/">Home</a>
-        <a href="/about/">About</a>
-        <a href="/blog/">Blog</a>
+		<Navigation />
 
 		<h1>{pageTitle}</h1>
+
+		<Footer />
 	</body>
 </html>
