--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,4 +1,9 @@
 ---
+import Navigation from '../components/Navigation.astro';
+import Footer from '../components/Footer.astro';
+
+import '../styles/global.css'
+
 const pageTitle = "51 LLMs | Blog"
 ---
 
@@ -11,10 +16,8 @@ const pageTitle = "51 LLMs | Blog"
 		<title>{pageTitle}</title>
 	</head>
 	<body>
-        <a href="/">Home</a>
-        <a href="/about/">About</a>
-        <a href="/blog/">Blog</a>
-        
+		<Navigation />
+		
         <h1>{pageTitle}</h1>
         <p>This blog will be a frequent informal update on experiments with my current 51 favorite LLMs.</p>
         <ul>
@@ -22,5 +25,7 @@ const pageTitle = "51 LLMs | Blog"
 			<li><a href="/posts/post-2/">Post 2</a></li>
       		<li><a href="/posts/post-3/">Post 3</a></li>
         </ul>
+
+		<Footer />
 	</body>
 </html>
