fixed youtube footer link

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,5 +5,5 @@ import Social from './Social.astro'
 <footer>
   <Social platform="twitter" username="profplate" />
   <Social platform="github" username="buildLittleWorlds" />
-  <Social platform="youtube" username="profplate" />
+  <Social platform="youtube" username="channel/UCdSWf9R6Y33PDmm2Kiyvfxg" />
 </footer>
