--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,5 +1,5 @@
 ---
-import Navigation from '../components/Navigation.astro';
+import Header from '../components/Header.astro'
 import Footer from '../components/Footer.astro';
 
 import '../styles/global.css'
@@ -40,7 +40,7 @@ const textCase = "uppercase"
 		  </style>
 	</head>
 	<body>
-		<Navigation />
+		<Header />
         
         <h1>{pageTitle}</h1>
         <p>This site is a record of experiments with 51 AI language models by a reader and writer of English.</p>
