--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,5 +1,5 @@
 ---
-import Navigation from '../components/Navigation.astro';
+import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 
 import '../styles/global.css'
@@ -16,7 +16,7 @@ const pageTitle = "51 LLMs | Blog"
 		<title>{pageTitle}</title>
 	</head>
 	<body>
-		<Navigation />
+		<Header />
 		
         <h1>{pageTitle}</h1>
         <p>This blog will be a frequent informal update on experiments with my current 51 favorite LLMs.</p>
