--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -27,5 +27,8 @@ const pageTitle = "51 LLMs | Blog"
         </ul>
 
 		<Footer />
+		<script>
+			import "../scripts/menu.js";
+		</script>
 	</body>
 </html>
