--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,5 +21,8 @@ const pageTitle = "51 LLMs"
 		<h1>{pageTitle}</h1>
 
 		<Footer />
+		<script>
+			import '../scripts/menu.js'
+		</script>
 	</body>
 </html>
