--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,8 +1,5 @@
 ---
-import Header from '../components/Header.astro'
-import Footer from '../components/Footer.astro';
-
-import '../styles/global.css'
+import BaseLayout from "../layouts/BaseLayout.astro";
 
 const pageTitle = "About Me";
 
@@ -20,48 +17,33 @@ const fontWeight = "bold"
 const textCase = "uppercase"
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{pageTitle}</title>
-		<style define:vars={{skillColor, fontWeight, textCase}}>
-			h1 {
-			  color: purple;
-			  font-size: 4rem;
-			}
-			.skill {
-			  color: var(--skillColor);
-			  font-weight: var(--fontWeight);
-			  text-transform: var(--textCase);
-			}
-		  </style>
-	</head>
-	<body>
-		<Header />
-        
-        <h1>{pageTitle}</h1>
-        <p>This site is a record of experiments with 51 AI language models by a reader and writer of English.</p>
-        <p>The best source of new knowledge about AIs as writers will come from readers and writers of natural language.</p>
+<BaseLayout pageTitle={pageTitle}>
+	<p>This site is a record of experiments with 51 AI language models by a reader and writer of English.</p>
+	<p>The best source of new knowledge about AIs as writers will come from readers and writers of natural language.</p>
 
-		<p>Here are a few facts about my current top model:</p>
-		<ul>
-			<li>My name is {top_llm.name}.</li>
-			<li>I live in {top_llm.company} and my strength is as a {top_llm.strength}.</li>
-			{top_llm.people.length >= 2 &&
-				<li>Two of my rulers are: {top_llm.people[0]} and {top_llm.people[1]}</li>
-			}
-		</ul>
-		<p>My skills are:</p>
-		<ul>
-  			{skills.map((skill) => <li class="skill">{skill}</li>)}
-		</ul>
+	<p>Here are a few facts about my current top model:</p>
+	<ul>
+		<li>My name is {top_llm.name}.</li>
+		<li>I live in {top_llm.company} and my strength is as a {top_llm.strength}.</li>
+		{top_llm.people.length >= 2 &&
+			<li>Two of my rulers are: {top_llm.people[0]} and {top_llm.people[1]}</li>
+		}
+	</ul>
+	<p>My skills are:</p>
+	<ul>
+		{skills.map((skill) => <li class="skill">{skill}</li>)}
+	</ul>
+<BaseLayout />
 
-		<Footer />
-		<script>
-			import "../scripts/menu.js";
-		</script>
-	</body>
-</html>
+
+<style define:vars={{skillColor, fontWeight, textCase}}>
+	h1 {
+	  color: purple;
+	  font-size: 4rem;
+	}
+	.skill {
+	  color: var(--skillColor);
+	  font-weight: var(--fontWeight);
+	  text-transform: var(--textCase);
+	}
+</style>
