--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,14 +1,13 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
-
+import BlogPost from "../components/BlogPost.astro"
+const allPosts = await Astro.glob('../pages/posts/*.md');
 const pageTitle = "51 LLMs | Blog"
 ---
 
 <BaseLayout pageTitle={pageTitle}>
 	<p>This blog will be a frequent informal update on experiments with my current 51 favorite LLMs.</p>
 	<ul>
-		<li><a href="/posts/post-1/">Post 1</a></li>
-		<li><a href="/posts/post-2/">Post 2</a></li>
-		<li><a href="/posts/post-3/">Post 3</a></li>
+		{allPosts.map((post) => <BlogPost title={post.frontmatter.title} url={post.url} />)}
 	</ul>
 </BaseLayout>
